Update metadata descriptions across the application to replace "desarrolladores" with "estudiantes" for improved clarity and alignment with target audience.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "HispanoLang - Lenguaje de Programación en Español",
   "short_name": "HispanoLang",
-  "description": "Lenguaje de programación moderno diseñado para desarrolladores de habla hispana. Aprende a programar en tu idioma.",
+  "description": "Lenguaje de programación moderno diseñado para estudiantes de habla hispana. Aprende a programar en tu idioma.",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#0f172a",
