--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "hispano-lang": "^2.1.2",
+    "hispano-lang": "2.2.2",
     "next": "15.5.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
